crates/rome_analyze/tests/specs/useWhile.js.snap
---
source: crates/rome_analyze/tests/spec_tests.rs
expression: useWhile.js
---
# Input
```js
for (let i = 0; i < 16; ++i) {}

for (; true; ) {}

```

# Diagnostics
```
error[useWhile]: Use a while loop instead of a for loop
  ┌─ useWhile.js:3:1
  │
3 │ for (; true; ) {}
  │ ^^^^^^^^^^^^^^^^^ Use a while loop instead of a for loop

Use a while loop
    | @@ -1,3 +1,3 @@
0 0 |   for (let i = 0; i < 16; ++i) {}
1 1 |   
2   | - for (; true; ) {}
  2 | + while (true) {}


```


